<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/Covid_nav"
        android:title="@string/Covid"
        android:icon="@drawable/covid"/>
       <item
        android:id="@+id/Emergency_nav"
        android:title="@string/Emergency"
           android:icon="@drawable/emergency"/>

    <item
        android:id="@+id/scheduling_ride"
        android:title="@string/SchedulingRide"
       android:icon="@drawable/scheduling" />

    <item
        android:id="@+id/youRide_nav"
        android:title="@string/you_ride"
        android:icon="@drawable/yourride"
        />
    <item
        android:id="@+id/wallet_nav"
        android:title="@string/wallet"
        android:visible="false"
        app:actionLayout="@layout/menu_arrow" />
    <item
        android:id="@+id/chat_nav"
        android:title="@string/Chat"
        android:icon="@drawable/upi_ic_support_hamburgar"
        />
    <item
        android:id="@+id/Show_qr"
        android:title="@string/ShowQR_menu"
        android:icon="@drawable/scanqr" />
    <item
        android:id="@+id/refer_nav"
        android:title="@string/refer_nav"
        android:icon="@drawable/refer"/>
    <item
        android:id="@+id/help_nav"
        android:title="Feedback"
        android:icon="@drawable/help" />
    <item
        android:id="@+id/howitworks_nav"
        android:title="@string/howit_works"
        android:icon="@drawable/ic_work" />
    <item
        android:id="@+id/settings_nav"
        android:title="@string/settings"
        android:visible="false"
        android:icon="@drawable/test_96"
        />
    <item
        android:id="@+id/terms_con_nav"
        android:title="@string/terms_con"
        android:icon="@drawable/condition" />
    <item
        android:id="@+id/privacy_policy_nav"
        android:title="@string/privacy_policy"
        android:icon="@drawable/policy" />

    <item
        android:id="@+id/aboutus_nav"
        android:title="@string/aboutus"
        android:icon="@drawable/about_us" />

    <item
        android:id="@+id/logout_nav"
        android:title="@string/logout"
        android:icon="@drawable/logout" />

</menu>